2004-11-25  Richard Henderson  <rth@redhat.com>

	PR c++/6764
	* reload1.c (set_initial_eh_label_offset): New.
	(set_initial_label_offsets): Use it.

2004-11-22  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR rtl-optimization/14838
	* emit-rtl.c (get_first_nonnote_insn): Don't assume first insn is a
	note.
	(get_last_nonnote_insn): Don't assume last insn is a note.

2004-10-14  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* doc/install.texi (*-*-solaris2*): Update with info about kernel
	patches to solve spurious testsuite failures.

2004-10-13  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR target/14454
	* config/sparc/sparc.c (TARGET_ASM_CAN_OUTPUT_MI_THUNK): Set to
	sparc_can_output_mi_thunk.
	(sparc_output_mi_thunk): Simplify handling of delta offset.  Add
	handling of vcall offset.
	(sparc_can_output_mi_thunk): New predicate.
	* doc/tm.texi (TARGET_ASM_OUTPUT_MI_THUNK): Document VCALL_OFFSET.
	(TARGET_ASM_OUTPUT_MI_VCALL_THUNK): Delete.
	(TARGET_ASM_CAN_OUTPUT_MI_THUNK): New target hook.

	* config/sparc/sparc.md (movdi): Remove redundant test.

2004-10-07  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* doc/install.texi (*-*-solaris2*): Fix marker for URL.

2004-10-06  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR target/16007
	* doc/install.texi (*-*-solaris2*): Mention potential problem
	with Sun assembler + GNU linker and C++ programs.
	Document status of binutils 2.15 release.

2004-09-30  Richard Henderson  <rth@redhat.com>
 
        * config/alpha/qrnnd.asm: Mark for noexecstack.
 
2004-09-30  Richard Henderson  <rth@redhat.com>
  
        * unwind-dw2.c (_Unwind_GetGR): Honor DWARF_ZERO_REG.
        * doc/tm.texi (DWARF_ZERO_REG): New.
  
        * config/alpha/alpha.c (alpha_sa_mask, alpha_expand_prologue,
        alpha_expand_epilogue): Revert 2003-09-30 change to store zero.
        * config/alpha/alpha.h (DWARF_ZERO_REG): New.

2004-09-30  Release Manager

	* GCC 3.3.5 Released.

2004-09-20  Roger Sayle  <roger@eyesopen.com>
