@@ -1,3 +1,9 @@
+2004-11-27  Alan Modra  <amodra@bigpond.net.au>
+
+	PR target/12769
+	* config/rs6000/rs6000.c (init_cumulative_args): Set call_cookie
+	from rs6000_default_long_calls for libcalls.
+
 2004-11-25  Richard Henderson  <rth@redhat.com>
 
 	PR c++/6764
